--- a/pages/aplicativos-sob-medida.html
+++ b/pages/aplicativos-sob-medida.html
@@ -595,6 +595,85 @@
         </div>
     </section>
 
+<!-- Footer -->
+<footer class="footer">
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-section">
+                <img src="../assets/LogoPrincipal-1.png" alt="Labrego IA" class="footer-logo">
+                <p class="footer-description">
+                    Soluções digitais sob medida com inteligência artificial.
+                </p>
+                <div class="footer-social">
+                    @labregoia
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3 class="footer-title">Serviços</h3>
+                <ul class="footer-links">
+                    <li><a href="aplicativos-sob-medida.html">Aplicativos Sob Medida</a></li>
+                    <li><a href="automacao-processos.html">Automação de Processos</a></li>
+                    <li><a href="inteligencia-artificial.html">Inteligência Artificial</a></li>
+                    <li><a href="agentes-inteligentes.html">Agentes Inteligentes</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3 class="footer-title">Produtos</h3>
+                <ul class="footer-links">
+                    <li><a href="vitriny.html">Vitriny AI</a></li>
+                    <li><a href="servicos.html">Desenvolvimento Custom</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3 class="footer-title">Empresa</h3>
+                <ul class="footer-links">
+                    <li><a href="sobre.html">Sobre Nós</a></li>
+                    <li><a href="cases.html">Cases de Sucesso</a></li>
+                    <li><a href="../index.html#contato">Contato</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3 class="footer-title">Contato</h3>
+                <div class="footer-contact">
+                    <div class="contact-item">
+                        <span class="contact-icon">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" stroke="currentColor" stroke-width="2"/>
+                                <polyline points="22,6 12,13 2,6" stroke="currentColor" stroke-width="2"/>
+                            </svg>
+                        </span>
+                        <span>contato@labregoia.com</span>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-icon">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" stroke="currentColor" stroke-width="2"/>
+                            </svg>
+                        </span>
+                        <span>11 934427070</span>
+                    </div>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon linkedin" aria-label="LinkedIn">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                        <a href="#" class="social-icon instagram" aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://wa.me/11934427070" class="social-icon whatsapp" aria-label="WhatsApp">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
+                        <a href="#" class="social-icon youtube" aria-label="YouTube">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Labrego IA. Todos os direitos reservados.</p>
+        </div>
+    </div>
+</footer>
     <!-- Floating Contact Button -->
     <div class="floating-contact" id="floatingContactWrapper">
         <div class="floating-menu" id="floatingMenu">
