Corrige classes de layout na página de aplicativos

--- a/pages/aplicativos-sob-medida.html
+++ b/pages/aplicativos-sob-medida.html
@@ -41,7 +41,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero-service">
+    <section class="services-hero">
         <div class="container">
             <div class="hero-content">
                 <div class="breadcrumb">
@@ -71,7 +71,7 @@
     </section>
 
     <!-- Service Overview -->
-    <section class="service-overview">
+    <section class="services-overview">
         <div class="container">
             <div class="overview-grid">
                 <div class="overview-content">
@@ -189,7 +189,7 @@
     </section>
 
     <!-- Process Section -->
-    <section class="development-process">
+    <section class="process-section">
         <div class="container">
             <div class="section-header">
                 <h2>Nosso processo de desenvolvimento</h2>
@@ -271,7 +271,7 @@
     </section>
 
     <!-- Technologies Section -->
-    <section class="technologies">
+    <section class="technologies-section">
         <div class="container">
             <div class="section-header">
                 <h2>Tecnologias que utilizamos</h2>
@@ -432,7 +432,7 @@
     </section>
 
     <!-- Investment Section -->
-    <section class="investment">
+    <section class="pricing-section">
         <div class="container">
             <div class="investment-content">
                 <div class="investment-text">
