Revise design and text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Labrego IA - Soluções Digitais com Inteligência Artificial</title>
-    <meta name="description" content="Transforme seu negócio com soluções inteligentes. Desenvolvemos tecnologias sob medida que automatizam processos, otimizam operações e aceleram o crescimento da sua empresa.">
+    <meta name="description" content="Soluções inteligentes para automatizar processos e acelerar o crescimento da sua empresa.">
     <meta name="keywords" content="inteligência artificial, automação, desenvolvimento, aplicativos, IA, tecnologia, soluções digitais">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <img src="assets/LogoPrincipal-1.png" alt="Labrego IA" class="logo-img">
+                    <img src="assets/LogoPrincipal-1.png" alt="Logo Labrego IA" class="logo-img">
                 </div>
                 <nav class="nav">
                     <a href="#inicio" class="nav-link">Início</a>
@@ -48,16 +48,16 @@
             <div class="hero-text">
                 <div class="badge">Inteligência Artificial</div>
                 <h1 class="hero-title">
-                    Sua empresa pronta para 
-                    <span class="gradient-text">escalar com inteligência artificial</span>
+                    Sua empresa pronta para
+                    <span class="gradient-text">crescer com inteligência artificial</span>
                 </h1>
                 <p class="hero-subtitle">
-                    Soluções digitais sob medida para quem busca velocidade, eficiência e escala. 
-                    Transformamos processos manuais em sistemas inteligentes que impulsionam resultados reais.
+                    Desenvolvemos soluções digitais personalizadas para acelerar seus resultados
+                    e automatizar rotinas de forma inteligente.
                 </p>
                 <div class="hero-buttons">
                     <button class="btn btn-primary btn-large" onclick="window.location.href='pages/servicos.html'">
-                        Descobrir Soluções
+                        Conheça nossas Soluções
                         <span class="arrow">→</span>
                     </button>
                     <button class="btn btn-secondary btn-large" onclick="window.location.href='pages/cases.html'">
@@ -67,7 +67,7 @@
             </div>
             <div class="hero-visual">
                 <div class="hero-logo">
-                    <img src="assets/LogoPrincipal-1.png" alt="Labrego IA" />
+                    <img src="assets/LogoPrincipal-1.png" alt="Logo Labrego IA" />
                 </div>
             </div>
         </div>
@@ -493,7 +493,7 @@
                             </div>
                             <div>
                                 <strong>Telefone</strong>
-                                <p>11 934427070</p>
+                                <p><a href="tel:+5511934427070">11 93442-7070</a></p>
                             </div>
                         </div>
                     </div>
@@ -501,16 +501,16 @@
                     <div class="social-links">
                         <h4>Siga-nos</h4>
                         <div class="social-icons">
-                            <a href="#" class="social-icon linkedin" aria-label="LinkedIn">
+                            <a href="https://www.linkedin.com/company/labrego-ia" class="social-icon linkedin" aria-label="LinkedIn" target="_blank">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
-                            <a href="#" class="social-icon instagram" aria-label="Instagram">
+                            <a href="https://www.instagram.com/labregoia" class="social-icon instagram" aria-label="Instagram" target="_blank">
                                 <i class="fab fa-instagram"></i>
                             </a>
                             <a href="https://wa.me/11934427070" class="social-icon whatsapp" aria-label="WhatsApp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
-                            <a href="#" class="social-icon youtube" aria-label="YouTube">
+                            <a href="https://www.youtube.com/@labregoia" class="social-icon youtube" aria-label="YouTube" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
@@ -572,10 +572,10 @@
         <div class="container">
             <div class="cta-content">
                 <h2 class="cta-title">
-                    Pronto para transformar sua operação com a Labrego IA?
+                    Pronto para impulsionar sua operação com a Labrego IA?
                 </h2>
                 <p class="cta-subtitle">
-                    Transformamos empresas por meio de inteligência artificial, criando soluções digitais sob medida com velocidade, eficiência e impacto.
+                    Aceleramos resultados com soluções digitais sob medida e inteligência artificial aplicada ao seu negócio.
                 </p>
                 <div class="cta-buttons">
                     <button class="btn btn-secondary btn-large" onclick="document.getElementById('contato').scrollIntoView({behavior: 'smooth'})">
@@ -595,7 +595,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <img src="assets/LogoPrincipal-1.png" alt="Labrego IA" class="footer-logo">
+                    <img src="assets/LogoPrincipal-1.png" alt="Logo Labrego IA" class="footer-logo">
                     <p class="footer-description">
                         Soluções digitais sob medida com inteligência artificial.
                     </p>
@@ -638,19 +638,19 @@
                                     <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" stroke="currentColor" stroke-width="2"/>
                                 </svg>
                             </span>
-                            <span>11 934427070</span>
+                            <span><a href="tel:+5511934427070">11 93442-7070</a></span>
                         </div>
                         <div class="social-icons">
-                            <a href="#" class="social-icon linkedin" aria-label="LinkedIn">
+                            <a href="https://www.linkedin.com/company/labrego-ia" class="social-icon linkedin" aria-label="LinkedIn" target="_blank">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
-                            <a href="#" class="social-icon instagram" aria-label="Instagram">
+                            <a href="https://www.instagram.com/labregoia" class="social-icon instagram" aria-label="Instagram" target="_blank">
                                 <i class="fab fa-instagram"></i>
                             </a>
                             <a href="https://wa.me/11934427070" class="social-icon whatsapp" aria-label="WhatsApp">
                                 <i class="fab fa-whatsapp"></i>
                             </a>
-                            <a href="#" class="social-icon youtube" aria-label="YouTube">
+                            <a href="https://www.youtube.com/@labregoia" class="social-icon youtube" aria-label="YouTube" target="_blank">
                                 <i class="fab fa-youtube"></i>
                             </a>
                         </div>
