--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                             </div>
                             <div>
                                 <strong>Telefone</strong>
-                                <p><a href="tel:+5511934427070">11 93442-7070</a></p>
+                                <p>11 93442-7070</p>
                             </div>
                         </div>
                     </div>
@@ -548,7 +548,6 @@
                                 <option value="ia">Inteligência Artificial Aplicada</option>
                                 <option value="agentes">Agentes Inteligentes</option>
                                 <option value="vitriny">Vitriny</option>
-                                <option value="consultoria">Consultoria</option>
                             </select>
                         </div>
                         
@@ -638,7 +637,7 @@
                                     <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" stroke="currentColor" stroke-width="2"/>
                                 </svg>
                             </span>
-                            <span><a href="tel:+5511934427070">11 93442-7070</a></span>
+                            <span>11 93442-7070</span>
                         </div>
                         <div class="social-icons">
                             <a href="https://www.linkedin.com/company/labrego-ia" class="social-icon linkedin" aria-label="LinkedIn" target="_blank">
