Remove hero logo and left-align text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section id="inicio" class="hero">
+    <section id="inicio" class="hero hero-no-logo">
         <div class="container">
         <div class="hero-content">
             <div class="hero-text">
@@ -63,11 +63,6 @@
                     <button class="btn btn-secondary btn-large" onclick="document.getElementById('sobre').scrollIntoView({behavior: 'smooth'})">
                         Ver Cases de Sucesso
                     </button>
-                </div>
-            </div>
-            <div class="hero-visual">
-                <div class="hero-logo">
-                    <img src="assets/LogoPrincipal-1.png" alt="Logo Labrego IA" />
                 </div>
             </div>
         </div>
