--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
     </header>
 
     <!-- Hero Section -->
-    <section id="inicio" class="hero hero-no-logo">
+    <section id="inicio" class="hero hero-no-logo hero-home">
+        <div class="floating-elements">
+            <div class="floating-element"><i class="fas fa-robot"></i></div>
+            <div class="floating-element"><i class="fas fa-brain"></i></div>
+            <div class="floating-element"><i class="fas fa-cogs"></i></div>
+        </div>
         <div class="container">
         <div class="hero-content">
             <div class="hero-text">
