--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                        <i class="fas fa-mobile-alt"></i>
                     </div>
                     <h3 class="service-title">Aplicativos Sob Medida</h3>
                     <p class="service-description">
@@ -172,12 +170,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12 2a3 3 0 0 0-3 3c0 1.5 1.5 3 3 3s3-1.5 3-3a3 3 0 0 0-3-3z" stroke="currentColor" stroke-width="2"/>
-                            <path d="M19 14c0-7-3-9-7-9s-7 2-7 9" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                            <path d="M12 14v8" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                            <path d="M8 18h8" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
+                        <i class="fas fa-gears"></i>
                     </div>
                     <h3 class="service-title">Automação de Processos</h3>
                     <p class="service-description">
@@ -186,10 +179,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M9 12l2 2 4-4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="2"/>
-                        </svg>
+                        <i class="fas fa-brain"></i>
                     </div>
                     <h3 class="service-title">Inteligência Artificial Aplicada</h3>
                     <p class="service-description">
@@ -198,9 +188,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                        <i class="fas fa-robot"></i>
                     </div>
                     <h3 class="service-title">Agentes Inteligentes</h3>
                     <p class="service-description">
