Adjust hero layout and Vitriny benefits

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
                     </button>
                 </div>
             </div>
-        </div>
+            <div class="floating-elements">
+                <div class="floating-element"><i class="fas fa-robot"></i></div>
+                <div class="floating-element"><i class="fas fa-brain"></i></div>
+                <div class="floating-element"><i class="fas fa-cogs"></i></div>
+            </div>
         </div>
     </section>
 
@@ -208,16 +212,16 @@
                     
                     <div class="vitriny-benefits">
                         <div class="benefit">
-                            <i class="fas fa-bolt benefit-icon"></i>
-                            <div class="benefit-title">AGILIDADE</div>
+                            <span class="benefit-emoji">⚡</span>
+                            <span class="benefit-title">AGILIDADE</span>
                         </div>
                         <div class="benefit">
-                            <i class="fas fa-chart-line benefit-icon"></i>
-                            <div class="benefit-title">PERFORMANCE</div>
+                            <span class="benefit-emoji">📈</span>
+                            <span class="benefit-title">PERFORMANCE</span>
                         </div>
                         <div class="benefit">
-                            <i class="fas fa-star benefit-icon"></i>
-                            <div class="benefit-title">QUALIDADE</div>
+                            <span class="benefit-emoji">⭐</span>
+                            <span class="benefit-title">QUALIDADE</span>
                         </div>
                     </div>
                     
