Refine header and hero UI

--- a/index.html
+++ b/index.html
@@ -61,11 +61,7 @@
                     </button>
                 </div>
             </div>
-            <div class="floating-elements">
-                <div class="floating-element"><i class="fas fa-robot"></i></div>
-                <div class="floating-element"><i class="fas fa-brain"></i></div>
-                <div class="floating-element"><i class="fas fa-cogs"></i></div>
-            </div>
+            <div class="floating-elements"></div>
         </div>
     </section>
 
@@ -212,15 +208,15 @@
                     
                     <div class="vitriny-benefits">
                         <div class="benefit">
-                            <span class="benefit-emoji">⚡</span>
+                            <span class="benefit-icon"><i class="fas fa-bolt"></i></span>
                             <span class="benefit-title">AGILIDADE</span>
                         </div>
                         <div class="benefit">
-                            <span class="benefit-emoji">📈</span>
+                            <span class="benefit-icon"><i class="fas fa-chart-line"></i></span>
                             <span class="benefit-title">PERFORMANCE</span>
                         </div>
                         <div class="benefit">
-                            <span class="benefit-emoji">⭐</span>
+                            <span class="benefit-icon"><i class="fas fa-star"></i></span>
                             <span class="benefit-title">QUALIDADE</span>
                         </div>
                     </div>
