Add header floating particles and enhance service icons

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <span></span>
                 </button>
             </div>
+            <div class="floating-elements header-floating"></div>
         </div>
     </header>
 
