Update contact email

--- a/404.html
+++ b/404.html
@@ -209,7 +209,7 @@
                     <a href="https://wa.me/11934427070" target="_blank" style="color: white; text-decoration: none; margin: 0 1rem;">
                         <i class="fab fa-whatsapp"></i> WhatsApp
                     </a>
-                    <a href="mailto:contato@labregoia.com" style="color: white; text-decoration: none; margin: 0 1rem;">
+                    <a href="mailto:contato@labregoia.com.br" style="color: white; text-decoration: none; margin: 0 1rem;">
                         <i class="far fa-envelope"></i> Email
                     </a>
                 </div>
@@ -296,7 +296,7 @@
                                 <polyline points="22,6 12,13 2,6" stroke="currentColor" stroke-width="2"/>
                             </svg>
                         </span>
-                        <span>contato@labregoia.com</span>
+                        <span>contato@labregoia.com.br</span>
                     </div>
                     <div class="contact-item">
                         <span class="contact-icon">
