--- a/pages/aplicativos-sob-medida.html
+++ b/pages/aplicativos-sob-medida.html
@@ -489,7 +489,7 @@
                                 <i class="fab fa-whatsapp"></i>
                                 WhatsApp
                             </a>
-                            <a href="mailto:contato@labregoia.com" class="contact-option">
+                            <a href="mailto:contato@labregoia.com.br" class="contact-option">
                                 <i class="far fa-envelope"></i>
                                 Email
                             </a>
@@ -632,7 +632,7 @@
                                 <polyline points="22,6 12,13 2,6" stroke="currentColor" stroke-width="2"/>
                             </svg>
                         </span>
-                        <span>contato@labregoia.com</span>
+                        <span>contato@labregoia.com.br</span>
                     </div>
                     <div class="contact-item">
                         <span class="contact-icon">
@@ -670,7 +670,7 @@
             <a href="https://wa.me/11934427070" target="_blank" class="floating-option whatsapp" aria-label="WhatsApp">
                 <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="mailto:contato@labregoia.com" class="floating-option email" aria-label="Email">
+            <a href="mailto:contato@labregoia.com.br" class="floating-option email" aria-label="Email">
                 <i class="far fa-envelope"></i>
             </a>
         </div>
