--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -529,7 +529,7 @@
                 <div class="footer-contact">
                     <div class="contact-item">
                         <span class="contact-icon"><i class="fas fa-envelope"></i></span>
-                        <span>contato@labregoia.com</span>
+                        <span>contato@labregoia.com.br</span>
                     </div>
                     <div class="contact-item">
                         <span class="contact-icon"><i class="fas fa-phone"></i></span>
@@ -563,7 +563,7 @@
             <a href="https://wa.me/11934427070" target="_blank" class="floating-option whatsapp" aria-label="WhatsApp">
                 <i class="fab fa-whatsapp"></i>
             </a>
-            <a href="mailto:contato@labregoia.com" class="floating-option email" aria-label="Email">
+            <a href="mailto:contato@labregoia.com.br" class="floating-option email" aria-label="Email">
                 <i class="far fa-envelope"></i>
             </a>
         </div>
