Add cases section on homepage

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#servicos" class="nav-link">Serviços</a>
                     <a href="#vitriny" class="nav-link">Vitriny</a>
                     <a href="#sobre" class="nav-link">Sobre</a>
-                    <a href="#" class="nav-link">Cases</a>
+                    <a href="#cases" class="nav-link">Cases</a>
                     <a href="#contato" class="nav-link">Contato</a>
                 </nav>
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -57,7 +57,7 @@
                         Conheça nossas Soluções
                         <span class="arrow">→</span>
                     </button>
-                    <button class="btn btn-secondary btn-large" onclick="document.getElementById('sobre').scrollIntoView({behavior: 'smooth'})">
+                    <button class="btn btn-secondary btn-large" onclick="document.getElementById('cases').scrollIntoView({behavior: 'smooth'})">
                         Ver Cases de Sucesso
                     </button>
                 </div>
@@ -389,6 +389,59 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Cases Section -->
+    <section id="cases" class="homepage-cases">
+        <div class="container">
+            <div class="section-header">
+                <div class="badge">Resultados Reais</div>
+                <h2 class="section-title">Nossos Cases</h2>
+                <p class="section-subtitle">Projetos que demonstram o impacto da inteligência artificial nos negócios</p>
+            </div>
+
+            <div class="cases-grid">
+                <div class="case-card">
+                    <div class="case-header">
+                        <div class="case-category">E-commerce</div>
+                        <div class="case-type">
+                            <i class="fas fa-shopping-cart"></i>
+                            <span>Vitriny AI</span>
+                        </div>
+                    </div>
+                    <h3>Conversão 47% maior</h3>
+                    <p>Loja virtual que reduziu abandono de carrinho e aumentou o ticket médio com o Vitriny AI.</p>
+                </div>
+
+                <div class="case-card">
+                    <div class="case-header">
+                        <div class="case-category">Financeiro</div>
+                        <div class="case-type">
+                            <i class="fas fa-shield-alt"></i>
+                            <span>Fraude</span>
+                        </div>
+                    </div>
+                    <h3>Fraudes -85%</h3>
+                    <p>Banco que adotou detecção em tempo real e diminuiu drasticamente as perdas.</p>
+                </div>
+
+                <div class="case-card">
+                    <div class="case-header">
+                        <div class="case-category">Automação</div>
+                        <div class="case-type">
+                            <i class="fas fa-cogs"></i>
+                            <span>RPA</span>
+                        </div>
+                    </div>
+                    <h3>Processos 80% mais rápidos</h3>
+                    <p>Robôs que executam tarefas repetitivas, liberando equipes para focar em estratégia.</p>
+                </div>
+            </div>
+
+            <div class="center-btn">
+                <a href="pages/cases.html" class="btn btn-secondary btn-large">Ver todos os cases <span class="arrow">→</span></a>
             </div>
         </div>
     </section>
