Add gallery section to Cases page

--- a/pages/cases.html
+++ b/pages/cases.html
@@ -463,6 +463,45 @@
             </div>
         </div>
     </section>
+    
+    <!-- Gallery of Cases -->
+    <section class="cases-gallery-section">
+        <div class="container">
+            <div class="section-header">
+                <h2>Galeria de Cases</h2>
+                <p>Fotos e vídeos que ilustram nossos projetos</p>
+            </div>
+            <div class="gallery-grid">
+                <div class="gallery-item">
+                    <div class="gallery-media">
+                        <img src="../assets/1.png" alt="Case Vitriny AI">
+                    </div>
+                    <div class="gallery-info">
+                        <h3>Vitriny AI na Loja XPTO</h3>
+                        <p>Personalização de vitrines e aumento de conversão.</p>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <div class="gallery-media">
+                        <img src="../assets/2.png" alt="Case de Automação">
+                    </div>
+                    <div class="gallery-info">
+                        <h3>Robôs Financeiros</h3>
+                        <p>Automatização de processos repetitivos com RPA.</p>
+                    </div>
+                </div>
+                <div class="gallery-item">
+                    <div class="gallery-media">
+                        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Video do Case" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <div class="gallery-info">
+                        <h3>Depoimento em Vídeo</h3>
+                        <p>Veja como ajudamos nossos clientes a obter resultados.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Testimonials -->
     <section class="testimonials-section">
