--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                     <div class="stat-label">Em economia gerada</div>
                 </div>
                 <div class="stat">
-                    <div class="stat-number">20 dias</div>
-                    <div class="stat-label">ENTREGA EXPRESSA</div>
+                    <div class="stat-number">+50</div>
+                    <div class="stat-label">PROJETOS ENTREGUES</div>
                 </div>
             </div>
                 <!-- Clients Section -->
