Atualiza fluxo metodologico

--- a/index.html
+++ b/index.html
@@ -240,15 +240,35 @@
                 </p>
             </div>
             <div class="methodology-icons">
-                            <div class="method">
-                                <i class="fas fa-angle-right"></i>
-                                <span>Método 1</span>
-                            </div>
-                            <div class="method">
-                                <i class="fas fa-angle-right"></i>
-                                <span>Método 2</span>
-                            </div>
-                        </div>
+                <div class="method">
+                    <i class="fas fa-angle-right"></i>
+                    <span>Diagnóstico</span>
+                </div>
+                <div class="method">
+                    <i class="fas fa-angle-right"></i>
+                    <span>Análise Consultiva</span>
+                </div>
+                <div class="method">
+                    <i class="fas fa-angle-right"></i>
+                    <span>Desenho da Solução</span>
+                </div>
+                <div class="method">
+                    <i class="fas fa-angle-right"></i>
+                    <span>Desenvolvimento</span>
+                </div>
+                <div class="method">
+                    <i class="fas fa-angle-right"></i>
+                    <span>Aprovação</span>
+                </div>
+                <div class="method">
+                    <i class="fas fa-angle-right"></i>
+                    <span>Entrega</span>
+                </div>
+                <div class="method">
+                    <i class="fas fa-angle-right"></i>
+                    <span>Acompanhamento + Ajustes (30 dias)</span>
+                </div>
+            </div>
             
         </div>
     </section>
