--- a/index.html
+++ b/index.html
@@ -228,66 +228,50 @@
         </div>
     </section>
 
-    <!-- ===== Nossa Abordagem ===== -->
+   <!-- ===== Nossa Abordagem ===== -->
 <section id="metodologia" class="methodology">
   <div class="container">
     <div class="section-header">
       <div class="badge">Nossa Abordagem</div>
-      <h2 class="section-title">
-        Processo estruturado para resultados excepcionais
-      </h2>
+      <h2 class="section-title">Processo estruturado para resultados excepcionais</h2>
       <p class="section-subtitle">
-        Metodologia comprovada que combina estratégia, tecnologia e execução
-        para entregar soluções que realmente transformam negócios.
+        Metodologia comprovada que combina estratégia, tecnologia e execução para
+        entregar soluções que realmente transformam negócios.
       </p>
     </div>
 
-    <div class="process-steps">
-      <div class="process-step">
-        <div class="process-step-icon">
-          <i class="fas fa-search"></i>
+    <ul class="steps-grid">
+      <li class="step-item">
+        <div class="step-icon"><i class="fas fa-search"></i></div>
+        <div class="step-label">Diagnóstico</div>
+      </li>
+      <li class="step-item">
+        <div class="step-icon"><i class="fas fa-comments"></i></div>
+        <div class="step-label">Análise Consultiva</div>
+      </li>
+      <li class="step-item">
+        <div class="step-icon"><i class="fas fa-pencil-alt"></i></div>
+        <div class="step-label">Desenho da Solução</div>
+      </li>
+      <li class="step-item">
+        <div class="step-icon"><i class="fas fa-code"></i></div>
+        <div class="step-label">Desenvolvimento</div>
+      </li>
+      <li class="step-item">
+        <div class="step-icon"><i class="fas fa-check-circle"></i></div>
+        <div class="step-label">Aprovação</div>
+      </li>
+      <li class="step-item">
+        <div class="step-icon"><i class="fas fa-truck"></i></div>
+        <div class="step-label">Entrega</div>
+      </li>
+      <li class="step-item">
+        <div class="step-icon"><i class="fas fa-cogs"></i></div>
+        <div class="step-label">
+          Acompanhamento<br><small>(30 dias)</small>
         </div>
-        <div class="process-step-title">Diagnóstico</div>
-      </div>
-      <div class="process-step">
-        <div class="process-step-icon">
-          <i class="fas fa-comments"></i>
-        </div>
-        <div class="process-step-title">Análise Consultiva</div>
-      </div>
-      <div class="process-step">
-        <div class="process-step-icon">
-          <i class="fas fa-pencil-alt"></i>
-        </div>
-        <div class="process-step-title">Desenho da Solução</div>
-      </div>
-      <div class="process-step">
-        <div class="process-step-icon">
-          <i class="fas fa-code"></i>
-        </div>
-        <div class="process-step-title">Desenvolvimento</div>
-      </div>
-      <div class="process-step">
-        <div class="process-step-icon">
-          <i class="fas fa-check-circle"></i>
-        </div>
-        <div class="process-step-title">Aprovação</div>
-      </div>
-      <div class="process-step">
-        <div class="process-step-icon">
-          <i class="fas fa-truck"></i>
-        </div>
-        <div class="process-step-title">Entrega</div>
-      </div>
-      <div class="process-step">
-        <div class="process-step-icon">
-          <i class="fas fa-cogs"></i>
-        </div>
-        <div class="process-step-title">
-          Acompanhamento + Ajustes<br><small>(30 dias)</small>
-        </div>
-      </div>
-    </div>
+      </li>
+    </ul>
   </div>
 </section>
 
@@ -301,9 +285,7 @@
 
     <div class="differentials-grid">
       <div class="differential-card">
-        <div class="differential-icon">
-          <i class="fas fa-lightbulb"></i>
-        </div>
+        <div class="differential-icon"><i class="fas fa-lightbulb"></i></div>
         <h3 class="differential-title">Visão de Negócio</h3>
         <p class="differential-description">
           Tecnologia desenhada para funcionar no mundo real.
@@ -311,9 +293,7 @@
       </div>
 
       <div class="differential-card">
-        <div class="differential-icon">
-          <i class="fas fa-bolt"></i>
-        </div>
+        <div class="differential-icon"><i class="fas fa-bolt"></i></div>
         <h3 class="differential-title">Agilidade com Qualidade</h3>
         <p class="differential-description">
           Entregas rápidas sem perder o cuidado com cada detalhe.
@@ -321,9 +301,7 @@
       </div>
 
       <div class="differential-card">
-        <div class="differential-icon">
-          <i class="fas fa-sliders-h"></i>
-        </div>
+        <div class="differential-icon"><i class="fas fa-sliders-h"></i></div>
         <h3 class="differential-title">Customização Real</h3>
         <p class="differential-description">
           Nada de pacotes prontos — cada solução é única.
@@ -331,9 +309,7 @@
       </div>
 
       <div class="differential-card">
-        <div class="differential-icon">
-          <i class="fas fa-user-friends"></i>
-        </div>
+        <div class="differential-icon"><i class="fas fa-user-friends"></i></div>
         <h3 class="differential-title">Atendimento Próximo</h3>
         <p class="differential-description">
           Você fala direto com quem entende de tecnologia e negócio.
@@ -341,9 +317,7 @@
       </div>
 
       <div class="differential-card">
-        <div class="differential-icon">
-          <i class="fas fa-handshake"></i>
-        </div>
+        <div class="differential-icon"><i class="fas fa-handshake"></i></div>
         <h3 class="differential-title">Compromisso com Resultados</h3>
         <p class="differential-description">
           Acompanhamos, ajustamos e garantimos o impacto que você busca.
@@ -352,6 +326,7 @@
     </div>
   </div>
 </section>
+
 
 
     <!-- Cases Section -->
