Organiza secao Nossa Abordagem em formato de timeline

--- a/index.html
+++ b/index.html
@@ -240,38 +240,63 @@
       </p>
     </div>
 
-    <ul class="steps-grid">
-      <li class="step-item">
-        <div class="step-icon"><i class="fas fa-search"></i></div>
-        <div class="step-label">Diagnóstico</div>
-      </li>
-      <li class="step-item">
-        <div class="step-icon"><i class="fas fa-comments"></i></div>
-        <div class="step-label">Análise Consultiva</div>
-      </li>
-      <li class="step-item">
-        <div class="step-icon"><i class="fas fa-pencil-alt"></i></div>
-        <div class="step-label">Desenho da Solução</div>
-      </li>
-      <li class="step-item">
-        <div class="step-icon"><i class="fas fa-code"></i></div>
-        <div class="step-label">Desenvolvimento</div>
-      </li>
-      <li class="step-item">
-        <div class="step-icon"><i class="fas fa-check-circle"></i></div>
-        <div class="step-label">Aprovação</div>
-      </li>
-      <li class="step-item">
-        <div class="step-icon"><i class="fas fa-truck"></i></div>
-        <div class="step-label">Entrega</div>
-      </li>
-      <li class="step-item">
-        <div class="step-icon"><i class="fas fa-cogs"></i></div>
-        <div class="step-label">
-          Acompanhamento<br><small>(30 dias)</small>
+    <div class="process-timeline">
+      <div class="process-step">
+        <div class="step-number">01</div>
+        <div class="step-content">
+          <h3>Diagnóstico</h3>
+          <p>Entendemos sua realidade e objetivos de negócio.</p>
         </div>
-      </li>
-    </ul>
+      </div>
+
+      <div class="process-step">
+        <div class="step-number">02</div>
+        <div class="step-content">
+          <h3>Análise Consultiva</h3>
+          <p>Aprofundamos nos desafios para propor as melhores soluções.</p>
+        </div>
+      </div>
+
+      <div class="process-step">
+        <div class="step-number">03</div>
+        <div class="step-content">
+          <h3>Desenho da Solução</h3>
+          <p>Criamos um plano detalhado alinhado às suas metas.</p>
+        </div>
+      </div>
+
+      <div class="process-step">
+        <div class="step-number">04</div>
+        <div class="step-content">
+          <h3>Desenvolvimento</h3>
+          <p>Implementamos com tecnologia moderna e processos ágeis.</p>
+        </div>
+      </div>
+
+      <div class="process-step">
+        <div class="step-number">05</div>
+        <div class="step-content">
+          <h3>Aprovação</h3>
+          <p>Você valida cada etapa para garantir aderência total.</p>
+        </div>
+      </div>
+
+      <div class="process-step">
+        <div class="step-number">06</div>
+        <div class="step-content">
+          <h3>Entrega</h3>
+          <p>Publicamos o projeto com segurança e acompanhamento.</p>
+        </div>
+      </div>
+
+      <div class="process-step">
+        <div class="step-number">07</div>
+        <div class="step-content">
+          <h3>Acompanhamento (30 dias)</h3>
+          <p>Monitoramos resultados iniciais e realizamos ajustes.</p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
