Organize 'Nossa Abordagem' steps horizontally

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </p>
     </div>
 
-    <div class="process-timeline">
+    <div class="process-steps">
       <div class="process-step">
         <div class="step-number">01</div>
         <div class="step-content">
