Improve Nossa Abordagem layout

--- a/index.html
+++ b/index.html
@@ -240,62 +240,62 @@
       </p>
     </div>
 
-    <div class="process-steps">
-      <div class="process-step">
-        <div class="step-number">01</div>
-        <div class="step-content">
-          <h3>Diagnóstico</h3>
-          <p>Entendemos sua realidade e objetivos de negócio.</p>
+      <div class="process-steps">
+        <div class="process-step">
+          <div class="step-number">01</div>
+          <div class="step-content">
+            <h3 class="process-step-title">Diagnóstico</h3>
+            <p class="process-step-description">Entendemos sua realidade e objetivos de negócio.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="process-step">
-        <div class="step-number">02</div>
-        <div class="step-content">
-          <h3>Análise Consultiva</h3>
-          <p>Aprofundamos nos desafios para propor as melhores soluções.</p>
+        <div class="process-step">
+          <div class="step-number">02</div>
+          <div class="step-content">
+            <h3 class="process-step-title">Análise Consultiva</h3>
+            <p class="process-step-description">Aprofundamos nos desafios para propor as melhores soluções.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="process-step">
-        <div class="step-number">03</div>
-        <div class="step-content">
-          <h3>Desenho da Solução</h3>
-          <p>Criamos um plano detalhado alinhado às suas metas.</p>
+        <div class="process-step">
+          <div class="step-number">03</div>
+          <div class="step-content">
+            <h3 class="process-step-title">Desenho da Solução</h3>
+            <p class="process-step-description">Criamos um plano detalhado alinhado às suas metas.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="process-step">
-        <div class="step-number">04</div>
-        <div class="step-content">
-          <h3>Desenvolvimento</h3>
-          <p>Implementamos com tecnologia moderna e processos ágeis.</p>
+        <div class="process-step">
+          <div class="step-number">04</div>
+          <div class="step-content">
+            <h3 class="process-step-title">Desenvolvimento</h3>
+            <p class="process-step-description">Implementamos com tecnologia moderna e processos ágeis.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="process-step">
-        <div class="step-number">05</div>
-        <div class="step-content">
-          <h3>Aprovação</h3>
-          <p>Você valida cada etapa para garantir aderência total.</p>
+        <div class="process-step">
+          <div class="step-number">05</div>
+          <div class="step-content">
+            <h3 class="process-step-title">Aprovação</h3>
+            <p class="process-step-description">Você valida cada etapa para garantir aderência total.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="process-step">
-        <div class="step-number">06</div>
-        <div class="step-content">
-          <h3>Entrega</h3>
-          <p>Publicamos o projeto com segurança e acompanhamento.</p>
+        <div class="process-step">
+          <div class="step-number">06</div>
+          <div class="step-content">
+            <h3 class="process-step-title">Entrega</h3>
+            <p class="process-step-description">Publicamos o projeto com segurança e acompanhamento.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="process-step">
-        <div class="step-number">07</div>
-        <div class="step-content">
-          <h3>Acompanhamento (30 dias)</h3>
-          <p>Monitoramos resultados iniciais e realizamos ajustes.</p>
+        <div class="process-step">
+          <div class="step-number">07</div>
+          <div class="step-content">
+            <h3 class="process-step-title">Acompanhamento (30 dias)</h3>
+            <p class="process-step-description">Monitoramos resultados iniciais e realizamos ajustes.</p>
+          </div>
         </div>
-      </div>
     </div>
   </div>
 </section>
